# All-vrrrr

./: README.md  settings.gradle
apk/: app-debug.apk
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: controller_offset_layer.h
app/src/main/cpp/src/: controller_offset_layer.cpp  jni_controller_offset.cpp
app/src/main/java/com/example/vrcontrolleroffset/: LogHelper.java  MainActivity.java  NativeVRLayer.java  OffsetService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
